<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.5.3</version>
    </parent>

    <groupId>com.metricalsky.backlogged</groupId>
    <artifactId>backlogged</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <url>https://github.com/mddburgess/backlogged</url>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>mddburgess</id>
            <name>Mike Burgess</name>
        </developer>
    </developers>

    <modules>
        <module>backend</module>
        <module>frontend</module>
        <module>package</module>
        <module>quality</module>
    </modules>

    <scm>
        <connection>scm:git:https://github.com/mddburgess/backlogged</connection>
        <developerConnection>scm:git:https://github.com/mddburgess/backlogged</developerConnection>
        <url>https://github.com/mddburgess/backlogged</url>
    </scm>
    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/mddburgess/backlogged/issues</url>
    </issueManagement>
    <ciManagement>
        <system>GitHub Actions</system>
        <url>https://github.com/mddburgess/backlogged/actions</url>
    </ciManagement>

    <properties>
        <java.version>16</java.version>

        <pmd.version>6.39.0</pmd.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>tidy-maven-plugin</artifactId>
                <version>1.1.0</version>
                <executions>
                    <execution>
                        <id>tidy-pom</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>pom</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>ci</id>
            <activation>
                <property>
                    <name>env.CI</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>tidy-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>tidy-pom</id>
                                <phase>none</phase>
                            </execution>
                            <execution>
                                <id>tidy-check</id>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
